--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -3,3 +3,6 @@
 $main-font-stack: 'Nunito', sans-serif;
 $code-font-stack: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
+
+$big: 40px;
+$medium: 22px;
