--- a/src/assets/scss/Navbar.scss
+++ b/src/assets/scss/Navbar.scss
@@ -1,8 +1,5 @@
 @use '../styles/colors';
 
-$gradient-light: linear-gradient(0deg, colors.$blue_4 0%, colors.$green_4 100%);
-$gradient-btn: linear-gradient(-90deg, colors.$blue_4 0%, colors.$green_3 100%);
-
 .upper-section-wrapper {
   position: sticky;
   position: -webkit-sticky;
@@ -83,10 +80,10 @@ $gradient-btn: linear-gradient(-90deg, colors.$blue_4 0%, colors.$green_3 100%);
   text-decoration: none;
 }
 
-.drop-down-icon {
-  margin-left: 0.5em;
-  clip-path: polygon(50% 100%, 10% 0, 90% 0);
-  background: $gradient-light;
+.navbar-icon {
+  margin-right: 0.5em;
+  clip-path: polygon(50% 0%, 90% 50%, 50% 100%, 10% 50%);
+  background: colors.$gradient-light;
   width: 0.5em;
   height: 0.5em;
 }
@@ -106,7 +103,7 @@ $gradient-btn: linear-gradient(-90deg, colors.$blue_4 0%, colors.$green_3 100%);
 .navbar-btn-border-wrap {
   border-radius: 25px;
   max-width: 250px;
-  background: $gradient-btn;
+  background: colors.$gradient-btn;
   padding: 2px;
   position: relative;
 }
