--- a/client/src/assets/styles/_colors.scss
+++ b/client/src/assets/styles/_colors.scss
@@ -32,4 +32,5 @@ $blue_8: #b8fcff;
 $blue_9: #ccfdff;
 
 $gradient-light: linear-gradient(0deg, $blue_4 0%, $green_4 100%);
-$gradient-btn: linear-gradient(-90deg, $blue_4 0%, $green_4 100%);
+$gradient-btn: linear-gradient(-90deg, $blue_4 0%, $green_3 100%);
+$footer-line-gradient: linear-gradient(90deg, #80cc08 0%, #00d1db 100%);
