--- a/src/assets/scss/Navbar.scss
+++ b/src/assets/scss/Navbar.scss
@@ -4,6 +4,7 @@
   position: sticky;
   position: -webkit-sticky;
   top: 0;
+  z-index: 50;
 }
 
 .upper-info {
@@ -14,7 +15,6 @@
   height: 20px;
   background-color: colors.$black;
   color: colors.$white;
-
   user-select: none; /* standard syntax */
   -webkit-user-select: none; /* webkit (safari, chrome) browsers */
   -moz-user-select: none; /* mozilla browsers */
