--- a/src/assets/scss/LandingPage.scss
+++ b/src/assets/scss/LandingPage.scss
@@ -145,6 +145,7 @@ h2 {
   width: 70%;
   margin-left: 15%;
   height: 110vh;
+  min-height: 1050px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
