--- a/src/assets/scss/Signup.scss
+++ b/src/assets/scss/Signup.scss
@@ -13,11 +13,7 @@
     grid-row: 1;
     grid-column-start: 1;
     grid-column-end: 4;
-    background: linear-gradient(
-      75deg,
-      rgba(0, 243, 255, 1) 0%,
-      rgba(175, 255, 49, 1) 100%
-    );
+    background: colors.$back-ground-gradient;
   }
 
   .logo {
@@ -44,6 +40,51 @@
     grid-row: 2;
     height: 100%;
     width: 100%;
+
+    .progress-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 2em 0;
+
+      .square {
+        width: 1.7em;
+        height: 1.7em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: colors.$black;
+        color: colors.$white;
+        z-index: 75;
+        position: relative;
+      }
+
+      .progress-line {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 1 1 auto;
+        height: 2px;
+        background-image: linear-gradient(
+          to right,
+          black 50%,
+          rgba(255, 255, 255, 0) 0%
+        );
+        background-position: bottom;
+        background-size: 4px 4px;
+        background-repeat: repeat-x;
+      }
+
+      .gradient_1 {
+        background: colors.$progress-gradient_1;
+      }
+      .gradient_2 {
+        background: colors.$progress-gradient_2;
+      }
+      .gradient_3 {
+        background: colors.$progress-gradient_3;
+      }
+    }
 
     .element {
       margin: 2em 0;
