--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -6,3 +6,13 @@ $code-font-stack: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 
 $big: 40px;
 $medium: 22px;
+
+$left-arrows: polygon(
+  40% 0%,
+  40% 25%,
+  100% 25%,
+  100% 75%,
+  40% 75%,
+  40% 100%,
+  0 50%
+);
