--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -11,7 +11,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
-  // overflow-y: hidden;
+  font-family: fonts.$main-font-stack;
+  font-weight: 300;
 }
 
 code {
