--- a/src/assets/scss/Navbar.scss
+++ b/src/assets/scss/Navbar.scss
@@ -99,7 +99,7 @@ nav {
   transition: 0.24s ease-out;
 }
 
-.navbar-element:active {
+.navbar-element:hover {
   background-color: colors.$grey_8;
 }
 
