--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap');
 
 $main-font-stack: 'Nunito', sans-serif;
-$code-font-stack: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+$code-font-stack: source-code-pro, Menlo, Monaco, Consolas,
+  'Courier New', monospace;
 
 $big: 40px;
 $medium: 22px;
