First part of the Landing Page done

--- a/src/assets/scss/LandingPage.scss
+++ b/src/assets/scss/LandingPage.scss
@@ -256,86 +256,4 @@ h2 {
 .signup-section.close {
   top: -100vh;
 }
-@media screen and (max-width: 1112px) {
-  .button{
-      font-size: 1.1em;
-      padding: 7px 20px;
-  }
-  .landing-text-section{
-    width: 69%;
-    .headline-wrapper > h1{
-      font-size: 2em;    
-    }
-  }
-}
-@media screen and (max-width: 742px) {
-  .landing-text-section{
-    width: 79%;
-    .headline-wrapper > h1{
-      font-size: 1.6em;    
-    }
-  }
-  #headline-color{
-    display: none;
-  }
-  .button{
-    display: none;
-  }
-  .hidden-button{
-    display: flex;
-  }
-}
-@media screen and (max-width: 598px) {
-  .right-gradient, .left-gradient{
-    width: 10%;
-  }
-  .landing-text-section{
-    width: 80%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    .headline-wrapper > h1{
-      font-size: 1.3em;    
-    }
-    h2{
-      font-size: 1em;
-      width: 100%;
-    }
-  }
-  .hidden-button{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 0.8em;
-  }
-}
-@media screen and (max-width: 464px) {
-  .right-gradient, .left-gradient, .landing-text-section{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    position: absolute;
-  }
-  .left-gradient{
-    height: 10%;
-    background: $green-gradient-resp;
-  }
-  .right-gradient{
-    height: 30%;
-    bottom: 0;
-    background: $blue-gradient-resp;
-  }
-
-  .landing-text-section{
-    height: 60%;
-    .headline-wrapper > h1{
-      font-size: 1.2em;    
-    }
-    h2{
-      font-size: 0.87em;
-      width: 100%;
-    }
-  }
-}
+@import "./rwd/LandingPage.scss";
