Completed the const part of the LandingPage.tsx RWD

--- a/src/assets/scss/LandingPage.scss
+++ b/src/assets/scss/LandingPage.scss
@@ -157,7 +157,7 @@ h2 {
   width: 70%;
   margin-left: 15%;
   height: 110vh;
-  min-height: 1050px;
+  min-height: 130vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -191,6 +191,9 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  .tiles-rwd{
+    display: none;
+  }
 }
 
 .login-section,
