Redesigned the solutions page accordingly to the design on figma.com

--- a/src/assets/scss/index.css
+++ b/src/assets/scss/index.css
@@ -13,6 +13,7 @@ body {
   scroll-behavior: smooth;
   font-family: 'Nunito', sans-serif;
   font-weight: 300;
+  overflow-y: auto !important;
 }
 
 a,
