--- a/src/assets/scss/Signup.scss
+++ b/src/assets/scss/Signup.scss
@@ -3,7 +3,8 @@
 
 .wrapper {
   z-index: -100;
-  width: 100vw;
+  width: 100%;
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: auto 450px auto;
   grid-template-rows: 75px auto 100px;
@@ -24,7 +25,7 @@
   }
 
   h1 {
-    margin-top: 2em;
+    margin-top: 1.6em;
     text-align: center;
     font-size: 40px;
   }
