--- a/src/assets/scss/index.css
+++ b/src/assets/scss/index.css
@@ -41,3 +41,12 @@ button {
 button:active {
   color: black;
 }
+
+.phone-wrapper-button{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100% !important;
+  text-align: center !important;
+  justify-content: center !important;
+}
